@@ -31,6 +31,7 @@ $ -> Language fix or change
  $ Adding el-GR, ka-GE installation langs
  $ Adding fi-FI installation langs. Modifying gu-IN.
  # [#24580] Localise xml default language is not highlighted in the drop down
+ # [#24582] Languages not installed in db but present in the language folders in joomla issue
 
 24-Jan-2011 Jean-Marie Simonet
  $ Updating af-ZA
